--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                         applications. Seeking an internship to learn and grow.
                     </p>
                     <div class="call-to-action">
-                        <a href="#" class="button black" target="_blank"
+                        <a href="https://drive.google.com/file/d/1bEYwFcUfNTeqzwJy1Rp9sE0Okhz7HrfX/view?usp=sharing" class="button black" target="_blank"
                             rel="noopener noreferrer">
                             View Resume
                         </a>
